--- a/_posts/2024-03-29-UMAD.markdown
+++ b/_posts/2024-03-29-UMAD.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "UMAD: University of Macau Anomaly Detection Benchmark Dataset"
 date:   2024-03-29 22:21:59 +00:00
-image: /images/2.jpeg
+image: /images/2.png
 categories: research
 author: "Dong Li"
 authors: "<strong>Dong Li</strong>, Lineng Chen, Cheng-zhong XU, Hui Kong"
