--- a/_posts/2024-03-29-UMAD.markdown
+++ b/_posts/2024-03-29-UMAD.markdown
@@ -8,7 +8,7 @@ author: "Dong Li"
 authors: "<strong>Dong Li</strong>, Lineng Chen, Cheng-Zhong Xu, Hui Kong"
 venue: "<strong>IROS</strong>"
 website: https://doongli.github.io/umad
-paper: https://doongli.github.io/
+paper: https://arxiv.org/pdf/2408.12527
 video: https://www.youtube.com/watch?v=xORb4H-AyNw
 code: https://github.com/IMRL/UMAD
 ---
