Add arxiv link to TWC-SLAM markdown file

--- a/_posts/2025-03-01-TWC-SLAM.markdown
+++ b/_posts/2025-03-01-TWC-SLAM.markdown
@@ -7,6 +7,7 @@ categories: research
 author: "Dong Li"
 authors: "Chunyu Li, Shoubin Chen#, <u>Dong Li</u>, Weixing Xue, Qingquan Li"
 venue: "IROS 2025"
+arxiv: https://arxiv.org/pdf/2510.22754
 code: 
 video: 
 ---
