--- a/_posts/2025-10-28-SLAM-X.markdown
+++ b/_posts/2025-10-28-SLAM-X.markdown
@@ -8,7 +8,7 @@ author: "Dong Li"
 authors: "Mingrui Li*,  <u>Dong Li*</u>, Sijia Hu, Kangxu Wang, Zhenjun Zhao, Hongyu Wang#"
 venue: "ACM MM 2025"
 Paper: https://dl.acm.org/doi/10.1145/3746027.3754971
-code: 
+code: https://github.com/DrLi-Ming/SLAM-X
 video: 
 ---
 
